# agentshub

./: .env.example  .gitignore  README.md  chat.py  demo.py  pyproject.toml  run.py
agentshub/: __init__.py  base.py  mcp_server.py  orchestrator.py  scheduler.py
agentshub/agents/: __init__.py  bbc_news.py  bigquery_analyst.py  instagram_trends.py  news_trending.py  patent_search.py  rising_search.py  search_console.py  site_security.py  social_trends.py  wikipedia_spike.py  youtube_shorts.py
agentshub/tools/: web_fetch.py
standalone/: bbc_news_mcp.py  bigquery_analyst_mcp.py  instagram_trends_mcp.py  news_trending_mcp.py  patent_search_mcp.py  rising_search_mcp.py  search_console_mcp.py  site_security_mcp.py  social_trends_mcp.py  wikipedia_spike_mcp.py  youtube_shorts_mcp.py
